[project]
name = "misfit-core"
version = "0.1.0"
description = ""
authors = [
    {name = "j-moreno-c-r",email = "joaomcr@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "misfit_core", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
